src/test/ui/span/E0535.stderr
error[E0535]: invalid argument
  --> $DIR/E0535.rs:11:10
   |
LL | #[inline(unknown)] //~ ERROR E0535
   |          ^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0535"
